--- a/Blanko/app/src/main/res/values/strings.xml
+++ b/Blanko/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_splash">SplashActivity</string>
     <string name="title_activity_welcome">WelcomeActivity</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="splash_screen">splash screen</string>
 </resources>
