--- a/Blanko/app/src/main/res/values/strings.xml
+++ b/Blanko/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="title_activity_welcome">WelcomeActivity</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="splash_screen">splash screen</string>
+    <string name="email" ><strong>[Email]</strong></string>
+    <string name="pass" ><strong>[Password]</strong></string>
 </resources>
